<resources>
    <string name="app_name">E Commerce</string>
    <string name="tool_bar_main_screen_title">Trang Chủ</string>
    <string name="text_view_title">Sản phẩm mới nhất</string>
    <string name="nav_header_title">Sama Corporation</string>
    <string name="nav_header_subtitle">quanglinhhoangnguyen@gmail.com</string>
    <string name="tool_bar_phone_screen_title">Điện Thoại</string>
    <string name="tool_bar_laptop_screen_title">Laptop</string>
    <string name="tool_bar_product_detail_screen_title">Chi tiết sản phẩm</string>
    <string name="button_add_to_cart">Thêm vào Giỏ Hàng</string>
    <string name="text_view_description_product">Mô tả chi tiết sản phẩm</string>
    <string name="text_view_cart_empty">Giỏ hàng trống</string>
    <string name="tool_bar_cart_screen_title">Giỏ hàng</string>
    <string name="text_view_total_price">Tổng tiền</string>
    <string name="button_buy">Mua hàng</string>
    <string name="button_delete">Xóa</string>
    <string name="tool_bar_login_screen_title">Đăng Nhập</string>
    <string name="edit_text_email_hint_login_screen">Email</string>
    <string name="edit_text_password_hint_login_screen">Mật khẩu</string>
    <string name="text_view_sign_up">Đăng ký</string>
    <string name="text_view_forget_password_login_screen">Quên mật khẩu ?</string>
    <string name="tool_bar_signup_screen_title">Đăng ký</string>
    <string name="edit_text_repassword_hint_login_screen">Nhập lại mật khẩu</string>
    <string name="text_view_type_user">Người bán</string>
    <string name="edit_text_phone_number_hint_login_screen">Số điện thoại</string>
    <string name="edit_text_name_hint_login_screen">Họ và tên</string>
    <string name="menu_item_history_order">Đơn hàng</string>
    <string name="button_cancel_signup_screen_title">Hủy</string>
    <string name="tool_bar_reset_password_screen_title">Đặt lại mật khẩu</string>
    <string name="text_view_reset_password">Đặt lại mật khẩu</string>
    <string name="tool_bar_order_screen_title">Đặt hàng</string>
    <string name="text_view_phone_order_screen">Số điện thoại</string>
    <string name="edit_text_address_order_screen">Nhập địa chỉ giao hàng</string>
    <string name="tool_bar_order_history_screen_title">Đơn hàng</string>
    <string name="text_view_title_date_order_history_screen">Ngày đặt</string>
    <string name="tool_bar_search_screen_title">Tìm kiếm</string>
    <string name="edit_text_search_screen">Nhập sản phẩm cần tìm</string>
    <string name="tool_bar_product_manage_screen_title">Quản lý sản phẩm</string>
    <string name="text_view_add_activity_product_manage">Thêm</string>
    <string name="text_view_delete_activity_product_manage">Xóa</string>
    <string name="text_view_modify_activity_product_manage">Sửa</string>
    <string name="tool_bar_add_product_screen_title">Thêm sản phẩm</string>
    <string name="edit_text_name_add_product_screen">Nhập tên sản phẩm</string>
    <string name="edit_text_price_add_product_screen">Nhập gía sản phẩm</string>
    <string name="edit_text_description_add_product_screen">Nhập mô tả sản phẩm</string>
    <string name="edit_text_quantity_add_product_screen">Nhập số lượng sản phẩm</string>
    <string name="text_view_type_add_product_screen">Chọn loại sản phẩm</string>
    <string name="text_view_picture_add_product_screen">Chọn hình ảnh sản phẩm</string>
    <string name="text_view_all_product_manage">Tất cả sản phẩm</string>
    <string name="text_view_title_notification">Thông báo</string>
    <string name="text_view_quantity_product_detail">Số lượng còn lại</string>
    <string name="tool_bar_order_manage_screen_title">Quản lý đơn hàng</string>
    <string name="text_view_all_order_manage">Tất cả đơn hàng</string>
    <string name="text_view_title_status_order_history_screen">Trạng thái</string>
    <string name="text_view_title_address_order_history_screen">Địa chỉ</string>
    <string name="text_view_title_update_status_order">Tình trạng đơn hàng</string>
    <string name="button_update_status_order">Cập nhật</string>
    <string name="button_cancel_update_status_order">Hủy</string>
    <string name="edit_text_content_chat">Nội dung chat</string>
    <string name="tool_bar_chat_screen_title">Tin nhắn</string>
    <string name="tool_bar_list_chat_screen_title">Danh Sách Chat</string>
    <string name="tool_bar_statistical_screen_title">Thống Kê </string>
    <string name="text_view_payment_order_screen">Thanh toán</string>
</resources>