<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/text_view_title_update_status_order"
        android:textColor="@color/indigo_700"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_update_status_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/spnr_number_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_update_status_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/indigo_700"
            android:gravity="center"
            android:text="@string/button_update_status_order"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_cancel_update_status_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/indigo_700"
            android:gravity="center"
            android:text="@string/button_cancel_update_status_order"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>