<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_login_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/indigo_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tool_bar_login_screen_title"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/image_view_login_screen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_login_screen" />

    <EditText
        android:id="@+id/edit_text_email_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/spnr_number_product"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/edit_text_email_hint_login_screen"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/unselected_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_login_screen" />

    <EditText
        android:id="@+id/edit_text_password_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/spnr_number_product"
        android:drawableLeft="@drawable/ic_password"
        android:drawableRight="@drawable/ic_show"
        android:hint="@string/edit_text_password_hint_login_screen"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/unselected_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_login_screen" />

    <Button
        android:id="@+id/button_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/indigo_700"
        android:gravity="center"
        android:text="@string/tool_bar_login_screen_title"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password_login_screen" />

    <TextView
        android:id="@+id/text_view_signup_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_view_sign_up"
        android:textColor="@color/indigo_700"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_screen" />

    <TextView
        android:id="@+id/text_view_forget_password_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/text_view_forget_password_login_screen"
        android:textColor="@color/indigo_700"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_screen" />

    <ProgressBar
        android:id="@+id/progress_bar_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>