<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_reset_password_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/indigo_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tool_bar_reset_password_screen_title"
        app:titleTextColor="@color/white" />

    <EditText
        android:paddingStart="10dp"
        android:id="@+id/edit_text_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/spnr_number_product"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/edit_text_email_hint_login_screen"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/unselected_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_reset_password_screen"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/indigo_700"
        android:gravity="center"
        android:text="@string/text_view_reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reset_password" />

    <ProgressBar
        android:id="@+id/progress_bar_reset_password_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forget_password" />

</androidx.constraintlayout.widget.ConstraintLayout>